Added comodo ruleset

--- a/lsws-conf/httpd_config.conf
+++ b/lsws-conf/httpd_config.conf
@@ -243,14 +243,22 @@ module cache {
     qsCache             1
     reqCookieCache      1
     respCookieCache     1
-    ignoreReqCacheCtrl  1
+    ignoreReqCacheCtrl  0
     ignoreRespCacheCtrl 0
 
-    enableCache         0
+    enableCache         1
     expireInSeconds     3600
-    enablePrivateCache  0
+    enablePrivateCache  1
     privateExpireInSeconds 3600
 
+}
+
+module mod_security {
+	modsecurity  on
+	modsecurity_rules `
+	SecRuleEngine On
+	`
+	modsecurity_rules_file /usr/local/lsws/modsec/comodo/rules.conf 
 }
 
 listener HTTP {
