Config use header for use without HAProxy

--- a/lsws-conf/templates/docker.conf
+++ b/lsws-conf/templates/docker.conf
@@ -38,6 +38,17 @@ virtualHostConfig  {
   context / {
     location              $DOC_ROOT/
     allowBrowse           1
+    extraHeaders          <<<END_extraHeaders
+Header set X-Frame-Options "SAMEORIGIN"
+Header set X-XSS-Protection "1; mode=block"
+Header set X-Content-Type-Options "nosniff"
+Header set Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https: ws: wss:"
+Header set Referrer-Policy "strict-origin-when-cross-origin"
+Header set Feature-Policy "geolocation 'self'; midi 'self'; sync-xhr 'self'; microphone 'self'; camera 'self'; magnetometer 'self'; gyroscope 'self'; fullscreen 'self'; payment 'self'"
+
+Header unset Set-Cookie
+Header add Set-Cookie (.*) \1;\ HttpOnly if !httponly_cookie
+    END_extraHeaders
 
     rewrite  {
 RewriteFile .htaccess
