--- a/docker-base/lsws-conf/httpd_config.conf
+++ b/docker-base/lsws-conf/httpd_config.conf
@@ -134,7 +134,7 @@ extProcessor lsphp{
     pcKeepAliveTimeout
     respBuffer                      0 
     autoStart                       1 
-    path                            activelsphp/bin/lsphp
+    path                            lsactive/bin/lsphp
     backlog                         100 
     instances                       1 
     priority                        0 
