--- a/docker-base/rules/rules.conf
+++ b/docker-base/rules/rules.conf
@@ -1,36 +1,29 @@
 Include crs-setup.conf
 
-Include REQUEST-900-EXCLUSION-RULES-BEFORE-CRS.conf
-Include REQUEST-901-INITIALIZATION.conf
-Include REQUEST-903.9001-DRUPAL-EXCLUSION-RULES.conf
-Include REQUEST-903.9002-WORDPRESS-EXCLUSION-RULES.conf
-Include REQUEST-903.9003-NEXTCLOUD-EXCLUSION-RULES.conf
-Include REQUEST-903.9004-DOKUWIKI-EXCLUSION-RULES.conf
-Include REQUEST-903.9005-CPANEL-EXCLUSION-RULES.conf
-Include REQUEST-903.9006-XENFORO-EXCLUSION-RULES.conf
-Include REQUEST-905-COMMON-EXCEPTIONS.conf
-Include REQUEST-910-IP-REPUTATION.conf
-Include REQUEST-911-METHOD-ENFORCEMENT.conf
-Include REQUEST-912-DOS-PROTECTION.conf
-Include REQUEST-913-SCANNER-DETECTION.conf
-Include REQUEST-920-PROTOCOL-ENFORCEMENT.conf
-Include REQUEST-921-PROTOCOL-ATTACK.conf
-Include REQUEST-922-MULTIPART-ATTACK.conf
-Include REQUEST-930-APPLICATION-ATTACK-LFI.conf
-Include REQUEST-931-APPLICATION-ATTACK-RFI.conf
-Include REQUEST-932-APPLICATION-ATTACK-RCE.conf
-Include REQUEST-933-APPLICATION-ATTACK-PHP.conf
-Include REQUEST-934-APPLICATION-ATTACK-NODEJS.conf
-Include REQUEST-941-APPLICATION-ATTACK-XSS.conf
-Include REQUEST-942-APPLICATION-ATTACK-SQLI.conf
-Include REQUEST-943-APPLICATION-ATTACK-SESSION-FIXATION.conf
-Include REQUEST-944-APPLICATION-ATTACK-JAVA.conf
-Include REQUEST-949-BLOCKING-EVALUATION.conf
-Include RESPONSE-950-DATA-LEAKAGES.conf
-Include RESPONSE-951-DATA-LEAKAGES-SQL.conf
-Include RESPONSE-952-DATA-LEAKAGES-JAVA.conf
-Include RESPONSE-953-DATA-LEAKAGES-PHP.conf
-Include RESPONSE-954-DATA-LEAKAGES-IIS.conf
-Include RESPONSE-959-BLOCKING-EVALUATION.conf
-Include RESPONSE-980-CORRELATION.conf
-Include RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf
+REQUEST-900-EXCLUSION-RULES-BEFORE-CRS.conf
+REQUEST-901-INITIALIZATION.conf
+REQUEST-905-COMMON-EXCEPTIONS.conf
+REQUEST-911-METHOD-ENFORCEMENT.conf
+REQUEST-913-SCANNER-DETECTION.conf
+REQUEST-920-PROTOCOL-ENFORCEMENT.conf
+REQUEST-921-PROTOCOL-ATTACK.conf
+REQUEST-922-MULTIPART-ATTACK.conf
+REQUEST-930-APPLICATION-ATTACK-LFI.conf
+REQUEST-931-APPLICATION-ATTACK-RFI.conf
+REQUEST-932-APPLICATION-ATTACK-RCE.conf
+REQUEST-933-APPLICATION-ATTACK-PHP.conf
+REQUEST-934-APPLICATION-ATTACK-GENERIC.conf
+REQUEST-941-APPLICATION-ATTACK-XSS.conf
+REQUEST-942-APPLICATION-ATTACK-SQLI.conf
+REQUEST-943-APPLICATION-ATTACK-SESSION-FIXATION.conf
+REQUEST-944-APPLICATION-ATTACK-JAVA.conf
+REQUEST-949-BLOCKING-EVALUATION.conf
+RESPONSE-950-DATA-LEAKAGES.conf
+RESPONSE-951-DATA-LEAKAGES-SQL.conf
+RESPONSE-952-DATA-LEAKAGES-JAVA.conf
+RESPONSE-953-DATA-LEAKAGES-PHP.conf
+RESPONSE-954-DATA-LEAKAGES-IIS.conf
+RESPONSE-955-WEB-SHELLS.conf
+RESPONSE-959-BLOCKING-EVALUATION.conf
+RESPONSE-980-CORRELATION.conf
+RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf
