--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -2,7 +2,7 @@ name: Docker Image Build
 
 on:
   schedule:
-    - cron: "0 0 * * 0"
+    - cron: "0 0 1 * *" # Run at 00:00 on the first day of the month
   push:
     branches:
       - "*"
