Add latest tag conditionally

--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -70,7 +70,8 @@ jobs:
           images: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
             ${{ env.REGISTRY_DOCKER }}/${{ env.IMAGE_NAME_DOCKER }}
-          tags: base
+          tags: |
+            base
 
       - name: Build & Push
         id: build-and-push
@@ -168,7 +169,9 @@ jobs:
           images: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
             ${{ env.REGISTRY_DOCKER }}/${{ env.IMAGE_NAME_DOCKER }}
-          tags: ${{ matrix.php_version.php_tag_version }}-${{ matrix.php_extensions.name }}
+          tags: |
+            ${{ matrix.php_version.php_tag_version }}-${{ matrix.php_extensions.name }}
+            type=raw,value=latest,enable=${{ matrix.php_extensions.php_tag_version == 'latest' }}
 
       - name: Build & Push
         id: build-and-push
@@ -261,7 +264,9 @@ jobs:
           images: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
             ${{ env.REGISTRY_DOCKER }}/${{ env.IMAGE_NAME_DOCKER }}
-          tags: ${{ matrix.php_version.php_tag_version }}-gbika-${{ matrix.php_extensions.name }}
+          tags: |
+            ${{ matrix.php_version.php_tag_version }}-gbika-${{ matrix.php_extensions.name }}
+            type=raw,value=latest,enable=${{ matrix.php_extensions.php_tag_version == 'latest' }}
 
       - name: Build & Push
         id: build-and-push
