--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -210,12 +210,14 @@ jobs:
             lsphp_version: lsphp83
             php_tag_version: php83
             oci_version: 3.3.0
+            openswoole_version: 22.1.2
             deprecated: false
           - version: 7.4
             php_detail_version: 7.4.33
             lsphp_version: lsphp74
             php_tag_version: php74
             oci_version: 2.2.0
+            openswoole_version: 22.0.0
             deprecated: true
         php_extensions:
           - name: "base"
