--- a/docker-base/lsws-conf/httpd_config.conf
+++ b/docker-base/lsws-conf/httpd_config.conf
@@ -20,16 +20,16 @@ adminEmails                      root@localhost
 indexFiles                       index.html, index.php
 disableWebAdmin                  1
 
-errorlog logs/error.log {
+errorlog logs/main.log {
         logLevel             DEBUG
         debugLevel           0
         rollingSize          10M
         enableStderrLog      1
 }
     
-accessLog logs/access.log {
+accessLog logs/main.log {
         rollingSize          10M    
-        keepDays             7    
+        keepDays             3    
         compressArchive      0
         logReferer           0     
         logUserAgent         0
@@ -45,7 +45,7 @@ tuning{
     maxSSLConnections            10000
     connTimeout                  300 
     maxKeepAliveReq              10000
-    smartKeepAlive               0 
+    smartKeepAlive               1 
     keepAliveTimeout             5 
     sndBufSize                   0 
     rcvBufSize                   0 
@@ -98,10 +98,10 @@ perClientConnLimit{
     dynReqPerSec                             0 
     outBandwidth                             0 
     inBandwidth                              0 
-    softLimit                                10000 
-    hardLimit                                10000 
-    gracePeriod                              15 
-    banPeriod                                300 
+    softLimit                                0 
+    hardLimit                                0 
+    gracePeriod                              0 
+    banPeriod                                0 
 }
 
 CGIRLimit{
@@ -109,12 +109,12 @@ CGIRLimit{
     minUID                                  11 
     minGID                                  10 
     priority                                0 
-    CPUSoftLimit                            10 
-    CPUHardLimit                            50 
-    memSoftLimit                            512M
-    memHardLimit                            512M
-    procSoftLimit                           400 
-    procHardLimit                           450 
+    CPUSoftLimit                            0 
+    CPUHardLimit                            0 
+    memSoftLimit                            0
+    memHardLimit                            0
+    procSoftLimit                           0 
+    procHardLimit                           0 
 }
     
 accessControl{
@@ -140,8 +140,8 @@ extProcessor lsphp{
     priority                        0 
     memSoftLimit                    0
     memHardLimit                    0
-    procSoftLimit                   1400 
-    procHardLimit                   1500 
+    procSoftLimit                   0 
+    procHardLimit                   0 
 }
 
 scriptHandler{
@@ -163,8 +163,8 @@ railsDefaults{
     priority                 3 
     memSoftLimit             0
     memHardLimit             0
-    procSoftLimit            500 
-    procHardLimit            600 
+    procSoftLimit            0 
+    procHardLimit            0 
 }
 
 wsgiDefaults{
@@ -182,8 +182,8 @@ wsgiDefaults{
     priority                 3 
     memSoftLimit             0
     memHardLimit             0
-    procSoftLimit            500 
-    procHardLimit            600 
+    procSoftLimit            0 
+    procHardLimit            0 
 }
 
 nodeDefaults{
@@ -201,21 +201,21 @@ nodeDefaults{
     priority                 3 
     memSoftLimit             0
     memHardLimit             0
-    procSoftLimit            500 
-    procHardLimit            600 
+    procSoftLimit            0 
+    procHardLimit            0 
 }
 
 module cache {
-    ls_enabled          1
+    ls_enabled          0
 
-    checkPrivateCache   1
-    checkPublicCache    1
+    checkPrivateCache   0
+    checkPublicCache    0
     maxCacheObjSize     10000000
     maxStaleAge         200
-    qsCache             1
-    reqCookieCache      1
-    respCookieCache     1
-    ignoreReqCacheCtrl  1
+    qsCache             0
+    reqCookieCache      0
+    respCookieCache     0
+    ignoreReqCacheCtrl  0
     ignoreRespCacheCtrl 0
 
     enableCache         0
