--- a/docker-base/lsws-conf/templates/docker.conf
+++ b/docker-base/lsws-conf/templates/docker.conf
@@ -13,15 +13,12 @@ virtualHostConfig  {
     useServer             1
   }
 
-  accesslog $SERVER_ROOT/logs/$VH_NAME.access.log {
+  accesslog {
     useServer             1
   }
 
   index  {
-    useServer             0
-    indexFiles            index.html, index.php
-    autoIndex             0
-    autoIndexURI          /_autoindex/default.php
+    useServer             1
   }
 
   expires  {
