--- a/docker-base/lsws-conf/templates/docker.conf
+++ b/docker-base/lsws-conf/templates/docker.conf
@@ -13,7 +13,7 @@ virtualHostConfig  {
     useServer             1
   }
 
-  accesslog {
+  accesslog  {
     useServer             1
   }
 
@@ -45,8 +45,8 @@ RewriteFile .htaccess
   }
 
   vhssl  {
-    keyFile               /root/.acme.sh/certs/$VH_NAME/$VH_NAME.key
-    certFile              /root/.acme.sh/certs/$VH_NAME/fullchain.cer
+    keyFile               /root/.acme.sh/certs/$VH_NAME_ecc/$VH_NAME.key
+    certFile              /root/.acme.sh/certs/$VH_NAME_ecc/fullchain.cer
     certChain             1
   }
 }
